# ChangeLog for app-cdr/qpxtool
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/qpxtool/ChangeLog,v 1.4 2006/03/19 22:00:10 vapier Exp $

*qpxtool-0.5.0 (19 Mar 2006)

  19 Mar 2006; Mike Frysinger <vapier@gentoo.org> +qpxtool-0.5.0.ebuild:
  Version bump.

*qpxtool-0.4.3 (26 Jan 2006)

  26 Jan 2006; Mike Frysinger <vapier@gentoo.org> +qpxtool-0.4.3.ebuild:
  Version bump as reported by Thomas Maguin.

  04 Jan 2006; Caleb Tennis <caleb@gentoo.org> qpxtool-0.4.2.ebuild:
  fix qmake calling

*qpxtool-0.4.2 (04 Jan 2006)

  04 Jan 2006; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Thomas Maguin #108284.