@@ -1,0 +1,3 @@
+MD5 be0fd0042c19f9916e3e912193fd8cdf qpxtool-0.5.3.tar.bz2 125485
+RMD160 1b26ff17d84fdaffff0649c9bb7cf2fb8e29391b qpxtool-0.5.3.tar.bz2 125485
+SHA256 895bcb2d7903b31c777f39444e4f8c9f4f6f1f12a5281a098e526a815d013101 qpxtool-0.5.3.tar.bz2 125485
