@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/qpxtool
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/qpxtool/ChangeLog,v 1.4 2006/03/19 22:00:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/qpxtool/ChangeLog,v 1.5 2006/06/10 23:42:26 vapier Exp $
+
+*qpxtool-0.5.3 (10 Jun 2006)
+
+  10 Jun 2006; Mike Frysinger <vapier@gentoo.org> +qpxtool-0.5.3.ebuild:
+  Version bump #134875 by Thomas Maguin.
 
 *qpxtool-0.5.0 (19 Mar 2006)
 
